--- a/nixos/homemanagerModules/hyprland/waybar/style.css
+++ b/nixos/homemanagerModules/hyprland/waybar/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: "MesloLGS Nerd Font Mono Bold";
+    font-family: "JetBrains Mono Nerdfont";
     font-size: 16px;
     min-height: 0;
     font-weight: bold;
@@ -86,6 +86,11 @@ button:hover {
 #pulseaudio {
     color: @blue;
     border-bottom: 2px solid @blue;
+}
+
+#pulseaudio.muted {
+  color: @overlay0;
+  border-color: @overlay0;
 }
 
 #network {
