--- a/nixos/homemanagerModules/hyprland/waybar/style.css
+++ b/nixos/homemanagerModules/hyprland/waybar/style.css
@@ -65,7 +65,7 @@ button:hover {
 #network,
 #mode,
 #scratchpad,
-#custom-power,
+#custom-poweroff,
 #custom-logout,
 #custom-lock,
 #custom-reboot {
@@ -77,7 +77,7 @@ button:hover {
   padding-right: 4px;
 }
 
-#custom-power,
+#custom-poweroff,
 #custom-logout,
 #custom-lock,
 #custom-reboot {
