--- a/nixos/homemanagerModules/hyprland/waybar/style.css
+++ b/nixos/homemanagerModules/hyprland/waybar/style.css
@@ -34,18 +34,19 @@ button:hover {
 
 #workspaces button {
   padding: 0 4px;
+  margin: 2px 4px;
 }
 
 #workspaces button.focused {
   background-color: rgba(0, 0, 0, 0.3);
   color: @rosewater;
-  border-top: 2px solid @rosewater;
+  border-bottom: 2px solid @rosewater;
 }
 
 #workspaces button.active {
   background-color: rgba(0, 0, 0, 0.3);
   color: @mauve;
-  border-top: 2px solid @mauve;
+  border-bottom: 2px solid @mauve;
 }
 
 #workspaces button.urgent {
