--- a/nixos/homemanagerModules/hyprland/waybar/style.css
+++ b/nixos/homemanagerModules/hyprland/waybar/style.css
@@ -91,8 +91,8 @@ button:hover {
 }
 
 #clock.date {
-  color: @mauve;
-  border-bottom: 2px solid @mauve;
+  color: @text;
+  border: none;
 }
 
 #pulseaudio {
